fix contrast issue
https://coveord.atlassian.net/browse/KIT-3925

--- a/packages/atomic/src/utils/coveo.tw.css
+++ b/packages/atomic/src/utils/coveo.tw.css
@@ -2,7 +2,7 @@
 
 @theme {
   /* Primary colors */
-  --atomic-primary: #1372ec;
+  --atomic-primary: #126ce0;
   --atomic-primary-light: #399ffe;
   --atomic-primary-dark: #1a50ad;
   --atomic-on-primary: #ffffff;
